--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 node_modules/
+
+/client/build
+.DS_store
+/client/.env.local
+/client.env.development.local
+/client.env.test.local
+/client.env.product.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
