--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "clientinstall" : "npm install --prefix client",
+    "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
